--- a/java/index.html
+++ b/java/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8" />
     <title>Изучаем язык JavaScript</title>
+    <script src="/script.js"></script>
 </head>
 
 <body>
-    <script src="/script.js">
-    </script>
+    
 </body>
 
 </html>
